# learn-opengl

./: CMakeLists.txt
include/: common.h  renderapp.h
shader/: f.glsl  fbasic.glsl
src/: main.cc  renderapp.cc
